css alignment fix

--- a/media/_digraph/media-screen.css.d/200-areas.css
+++ b/media/_digraph/media-screen.css.d/200-areas.css
@@ -1,4 +1,4 @@
-#digraph-body {
+#digraph-body, #digraph-meta {
   .digraph-area-wrapper {
     padding: 0 $(spacing_base);
   }
